# veil

./: .gitignore  .prettierignore  CLAUDE.md  DISTRIBUTION.md  PLAN.md  RELEASE.md  eslint.config.js  index.html  package.json  vitest.config.ts
.claude/: settings.json
.claude/hooks/: entrypoint-review.sh
.claude/skills/control-ui/: .gitignore  README.md  login.mjs  probe.mjs  watch.mjs
.claude/skills/gh-image/: SKILL.md  gh-image
.claude/skills/lightweight-entrypoints/: CLAUDE.root.multi-zone.md  CLAUDE.root.single-zone.md  CLAUDE.zone.md  SKILL.md  example-filled-root.md
.github/workflows/: ci.yml  release.yml
Casks/: veil.rb
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  focus.rs  keychain.rs  lib.rs  lock.rs  main.rs  power.rs  recovery.rs  screen.rs  settings.rs  state.rs  tray.rs  update.rs
src-tauri/src/auth/: mod.rs  pin.rs  touchid.rs
src-tauri/src/overlay/: mod.rs  nswindow.rs  windows.rs
src/components/: AuthPrompt.test.tsx  AuthPrompt.tsx  Clock.tsx  PinPad.tsx  RecoveryCodeDisplay.tsx
src/components/ui/: button.tsx  switch.tsx
src/hooks/: useAppState.ts  useSettings.ts
src/lib/: commands.ts  ipc.ts  query-client.ts  window.test.ts  window.ts
src/store/: veil-store.ts
src/test/: setup.ts
src/types/: settings.ts  state.ts
src/views/: FirstRunView.tsx  OverlayView.tsx  SettingsView.tsx
